--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.1.7"
 description = "Regularly send 60s daily reading world to friends in the specified group or list"
 authors = []
 readme = "README.md"
-repository = "https://github.com/bingganhe123/60s-"
+repository = "https://github.com/bingganhe123/60s"
 packages = [{ include = 'nonebot_plugin_read_60s' }]
 
 [tool.poetry.dependencies]
