--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ nonebot2 = "^2.0.0-beta.1"
 pytest = "^5.2"
 nonebot-adapter-onebot = "^2.0.0-beta.1"
 nb-cli = "^0.6.5"
+nonebot-plugin-apscheduler = "^0.1.2"
 
 [tool.nonebot]
 plugins = ["nonebot_plugin_read_60s"]
