--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,11 +9,15 @@ packages = [{ include = 'nonebot_plugin_read_60s' }]
 
 [tool.poetry.dependencies]
 python = "^3.9"
+requests = "^2.27.1"
 nonebot2 = "^2.0.0-beta.1"
+json5 = "^0.9.6"
+nonebot-plugin-apscheduler = "^0.1.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
 nonebot-adapter-onebot = "^2.0.0-beta.1"
+json5 = "^0.9.6"
 nb-cli = "^0.6.5"
 nonebot-plugin-apscheduler = "^0.1.2"
 
